[package]
name = "range_date"
version = "0.2.4"
edition = "2024"
description = "A powerful Rust crate for handling date periods with embedded data and comprehensive date range operations."
license = "MIT"
repository = "https://github.com/GuoMonth/range_date"
homepage = "https://github.com/GuoMonth/range_date"
documentation = "https://docs.rs/range_date"
readme = "README.md"
keywords = ["date", "range", "time", "period", "chrono"]
categories = ["date-and-time", "data-structures"]
authors = ["GuoMonth"]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
serde = "1.0.228"
serde_json = "1.0.149"
